# neural_priors_gym

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  nightly.yml  publish.yml
docs/: CLAUDE.md  citing.md  conf.py  index.rst  quickstart.md  references.bib  yaml_reference.md
docs/_static/: style.css
docs/_templates/: class.rst
docs/api/: neural_priors_gym.config.rst  neural_priors_gym.data.rst  neural_priors_gym.evaluation.rst  neural_priors_gym.flows.rst  neural_priors_gym.module_a.rst  neural_priors_gym.rst  neural_priors_gym.training.rst  package_name.module_a.rst  package_name.rst
docs/api/_autosummary/: neural_priors_gym.config.parser.load_config.rst  neural_priors_gym.config.schema.TrainingConfig.rst  neural_priors_gym.config.schemas.flow.GlasflowConfig.rst  neural_priors_gym.config.schemas.flow.ZukoMAFConfig.rst  neural_priors_gym.config.schemas.lambdas.LambdaConfig.rst  neural_priors_gym.config.schemas.masses.BilbyMassConfig.rst  neural_priors_gym.config.schemas.masses.DoubleGaussianMassConfig.rst  neural_priors_gym.config.schemas.masses.GaussianMassConfig.rst  neural_priors_gym.config.schemas.masses.UniformMassConfig.rst  neural_priors_gym.config.schemas.training.TrainingHyperparamsConfig.rst  neural_priors_gym.data.generator.TrainingDataGenerator.rst  neural_priors_gym.data.lambdas.interpolator.EOSLambdaInterpolator.rst  neural_priors_gym.data.masses.base.MassGenerator.rst  neural_priors_gym.data.masses.bilby_prior.BilbyPriorMassGenerator.rst  neural_priors_gym.data.masses.double_gaussian.DoubleGaussianMassGenerator.rst  neural_priors_gym.data.masses.gaussian.GaussianMassGenerator.rst  neural_priors_gym.data.masses.nsbh.NSBHMassGenerator.rst  neural_priors_gym.data.masses.uniform.UniformMassGenerator.rst  neural_priors_gym.evaluation.metrics.compute_jsd.rst  neural_priors_gym.evaluation.metrics.compute_jsd_1d.rst  neural_priors_gym.flows.base.FlowBase.rst  neural_priors_gym.flows.glasflow.GlasflowNSF.rst  neural_priors_gym.flows.zuko_maf.ZukoMAF.rst  neural_priors_gym.training.trainer.FlowTrainer.rst
docs/developer_guide/: adding_new_flow.md  adding_new_mass_model.md  contributing.md
docs/examples/: getting_started.md
examples/bns_double_gaussian/: config.yaml
examples/bns_gaussian/: config.yaml
examples/bns_uniform/: config.yaml
examples/bns_uniform_zuko_maf/: config.yaml
examples/custom_data/: config.yaml
examples/nsbh_uniform/: config.yaml
scripts/: init.sh  jester_hdf5_to_npz.py
src/neural_priors_gym/: __init__.py  cli.py  convert.py  logging_config.py
src/neural_priors_gym/config/: __init__.py  parser.py  schema.py
src/neural_priors_gym/data/: __init__.py  generator.py
src/neural_priors_gym/evaluation/: __init__.py  bounds.py  metrics.py
src/neural_priors_gym/flows/: __init__.py  base.py  glasflow.py  zuko_maf.py
src/neural_priors_gym/plotting/: __init__.py  labels.py  plots.py
src/neural_priors_gym/training/: __init__.py  trainer.py
src/package_name/: __init__.py
tests/: __init__.py  conftest.py  test_bounds.py  test_cli.py  test_config.py  test_data_generator.py  test_error_paths.py  test_example.py  test_flow.py  test_lambda_tilde_and_log.py  test_lambdas.py  test_masses.py  test_metrics.py  test_nsbh_and_derived_params.py  test_parameter_names_and_custom_data.py  test_trainer.py
tests/fixtures/: bns_test.prior  eos_samples_test.npz
tests/test_flows/: test_latent_to_data.py  test_zuko_maf.py
(+15 files in other folders)
